2002-06-13  Marco Pantaleoni  <panta@elasticworld.org>

	* the scanner uses only streams now (see compile.c, EcCompile() &
	co.). Need to finish the package saving bits to save to streams
	instead of files.

	* made the compiler use streams and filestream. Still need to
	add the stream-only interface.

	* lot of changes to many files, removed from almost anyware
	direct usage of libc stdio (or conditionalized with WITH_STDIO).
	Everything uses streams. Still to conditionalize usage of
	`filestream' module (which could not be available statically).

2002-06-12  Marco Pantaleoni  <panta@elasticworld.org>

	* lot of changes to many files, adapting almost everything to
	new generic I/O. We still need to complete the generic I/O API,
	to enable modular compilation of streams and filestreams, to add
	elastiC functions to change the default stdio streams, ...

	* src/stream_t.h src/filestream.[hc] src/types/stream_t.c
	src/modules/stream_m.c: implemented elastiC stream type, stream
	module, filestream module and C API.

2002-06-11  Marco Pantaleoni  <panta@elasticworld.org>

	* src/stream.[hc] src/filestream.c ...: started implementing
	generic I/O (streams). First cut also at a specialized
	`filestream' stream (based on stdlib streams). Oh well...

2002-06-07  Marco Pantaleoni  <panta@elasticworld.org>

	* configure.in src/compat.h src/builtin.c src/elastic.c
	src/private.h src/modules/errno_m.c: added the `errno' module.

	* src/lib.c: added `basic.system'

	* src/types/file.c: added `file.popen'.

	* src/modules/posix_m.c: added POSIX functions `stat', `fstat',
	`lstat', `lseek', `mkfifo'.

2002-06-06  Marco Pantaleoni  <panta@elasticworld.org>

	* src/modules/posix_m.c: added POSIX functions `getcwd', `mkdir',
	`rmdir', `chdir', `link', `unlink', `rename', `chmod', `chown',
	`dup', `dup2', `pipe', `fork', `execv', `execve', `execvp',
	`wait', `waitpid', `_exit', `kill', `sleep', `pause', `alarm',
	`setuid', `setgid'.
