@@ -1,3 +1,9 @@
+2002-06-14  Marco Pantaleoni  <panta@elasticworld.org>
+
+	* packageio.c ...: rationalized a bit package loading API
+	(EcPackageLoad() has been split into EcPackageLoadByName() and
+	EcPackageLoadByPath()).
+
 2002-06-13  Marco Pantaleoni  <panta@elasticworld.org>
 
 	* the scanner uses only streams now (see compile.c, EcCompile() &
